--- a/horarios_participantes.html
+++ b/horarios_participantes.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Panel Participante - Gestión de Horarios</title>
+  <title>Panel Participante - Reserva de reuniones</title>
   <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
@@ -16,7 +16,7 @@
       </a>
       <div class="header-text">
         <h2>
-          Panel Participante - Gestión de Horarios<br>
+          Panel Participante - Reserva de reuniones<br>
           Bienvenido, <span id="userName"></span>
         </h2>
         <div id="userFolderLink"></div>
