--- a/horarios_participantes.html
+++ b/horarios_participantes.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Reserva de Reuniones - Panel Participante</title>
+  <link rel="icon" href="images/logo_incuba.png" type="image/png"> <!-- Favicon -->
   <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="icon" href="images/logo_incuba.png" type="image/png">
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
@@ -78,6 +78,7 @@
         eventClick: function(info) {
           const evento = info.event;
 
+          // Si el título es "Disponible", se crea una nueva reserva
           if (evento.title === "Disponible") {
             Swal.fire({
               title: 'Reservar Cita',
@@ -97,9 +98,14 @@
               }
             }).then(result => {
               if (result.isConfirmed) {
+                // Eliminar el evento "Disponible"
                 evento.remove();
+
+                // Crear el evento con el nombre del emprendedor y correo en el título
+                const title = `${result.value.nombre}\n${userEmail}`;
+
                 calendar.addEvent({
-                  title: result.value.nombre,
+                  title: title,
                   start: evento.startStr,
                   end: evento.endStr,
                   color: '#2196F3',
@@ -119,9 +125,19 @@
               cancelButtonText: 'Cancelar'
             }).then(result => {
               if (result.isConfirmed) {
+                // Eliminar la cita
                 evento.remove();
-                Swal.fire('Eliminado', 'Tu cita ha sido eliminada.', 'success');
-                // Aquí agregar lógica para eliminar del backend
+
+                // Volver a agregar un evento "Disponible" en el mismo horario
+                calendar.addEvent({
+                  title: `${evento.start.toLocaleTimeString([], {hour: '2-digit', minute: '2-digit'})}\nDisponible`,
+                  start: evento.startStr,
+                  end: evento.endStr,
+                  color: '#67bf5c' // Puedes ajustar el color a tu preferencia
+                });
+
+                Swal.fire('Eliminado', 'Tu cita ha sido eliminada y el espacio está disponible.', 'success');
+                // Aquí agregar lógica para eliminar del backend y hacer que el espacio se vuelva disponible para otros usuarios
               }
             });
           }
@@ -129,7 +145,16 @@
         eventAllow: function(dropInfo, draggedEvent) {
           return draggedEvent.extendedProps.email === userEmail;
         },
-        events: eventos
+        events: eventos.map(evento => {
+          if (evento.title === 'Disponible') {
+            return {
+              ...evento,
+              title: `${new Date(evento.start).toLocaleTimeString([], {hour: '2-digit', minute: '2-digit'})}\nDisponible`,
+              color: '#67bf5c'
+            };
+          }
+          return evento;
+        })
       });
 
       calendar.render();
