--- a/horarios_participantes.html
+++ b/horarios_participantes.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Reserva de Reuniones - Panel Participante</title>
+  <title>Panel Participante - Reserva de Reuniones</title>
   <link rel="icon" href="images/logo_incuba.png" type="image/png"> <!-- Favicon -->
   <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
@@ -17,7 +17,7 @@
       </a>
       <div class="header-text">
         <h2>
-          Reserva de Reuniones - Panel Participante<br>
+          Panel Participante - Reserva de Reuniones<br>
           Bienvenido, <span id="userName"></span>
         </h2>
         <div id="userFolderLink"></div>
