--- a/horarios_participantes.html
+++ b/horarios_participantes.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Panel Participante - Reserva de Reuniones</title>
-  <link rel="icon" href="images/LOGO Uandina blanco2.png" type="image/png"> <!-- Favicon -->
+  <link rel="icon" href="images/Logo incuba blanco.png" type="image/png"> <!-- Favicon -->
   <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
