--- a/horarios_participantes.html
+++ b/horarios_participantes.html
@@ -5,6 +5,7 @@
   <title>Panel Participante - Reserva de Reuniones</title>
   <link rel="icon" href="images/logo 30x30 incuba.png" type="image/png">
   <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
