--- a/horarios_participantes.html
+++ b/horarios_participantes.html
@@ -1,1 +1,184 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>Panel Participante - Reserva de Reuniones</title>
+  <link rel="icon" href="images/logo 30x30 incuba.png" type="image/png">
+  <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+</head>
+<body>
+  <header>
+    <div class="header-content">
+      <a href="https://sites.google.com/uandina.edu.pe/incubalab" target="_blank">
+        <img src="images/Logo incuba blanco.png" alt="Logo Incuba Andina" id="logo-header">
+      </a>
+      <div class="header-text">
+        <h2>
+          Panel Participante - Reserva de Reuniones<br>
+          Bienvenido, <span id="userName"></span>
+        </h2>
+        <div id="userFolderLink"></div>
+      </div>
+    </div>
+  </header>
 
+  <div id="calendar"></div>
+
+  <div id="logoutContainer">
+    <button id="logoutBtn">Cerrar sesión</button>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.js"></script>
+  <script type="module" src="authCheck.js"></script>
+  <script type="module">
+    import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-auth.js";
+
+    document.addEventListener('DOMContentLoaded', async () => {
+      const auth = getAuth();
+      let userEmail = "";
+
+      onAuthStateChanged(auth, user => {
+        if (user) {
+          userEmail = user.email;
+          document.getElementById("userName").textContent = user.displayName || userEmail;
+
+          fetch("json/carpetas_personales.json")
+            .then(response => response.json())
+            .then(data => {
+              const usuario = data.find(u => u.email === userEmail);
+              if (usuario) {
+                document.getElementById("userFolderLink").innerHTML = `<strong>Carpeta personal:</strong> <a href="${usuario.link}" target="_blank">Ver carpeta</a>`;
+              }
+            });
+        }
+      });
+
+      const [andyEvents, dennisseEvents] = await Promise.all([
+        fetch('json/andy_eventos.json').then(r => r.json()),
+        fetch('json/dennisse_eventos.json').then(r => r.json())
+      ]);
+
+      const eventos = [
+        ...andyEvents.map(ev => ({ ...ev, color: '#67bf5c' })),
+        ...dennisseEvents.map(ev => ({ ...ev, color: '#c98db1' }))
+      ];
+
+      const calendarEl = document.getElementById('calendar');
+      const calendar = new FullCalendar.Calendar(calendarEl, {
+        initialView: 'timeGridWeek',
+        slotMinTime: '08:00:00',
+        slotMaxTime: '16:00:00',
+        locale: 'es',
+        editable: false,
+        eventOverlap: false,
+        allDaySlot: false,
+        weekends: false, 
+        eventContent: function(arg) {
+          const titleLines = arg.event.title.split('\n');
+          return {
+            html: `
+              <div class="custom-event">
+                ${titleLines.map(line => `<div>${line}</div>`).join('')}
+              </div>
+            `
+          };
+        },
+        eventClick: function(info) {
+          const evento = info.event;
+
+          if (evento.title.includes("Disponible")) {
+            Swal.fire({
+              title: 'Reservar Cita',
+              html:
+                '<input type="text" id="nombreEmprendimiento" class="swal2-input" placeholder="Nombre del emprendimiento">' +
+                '<input type="text" id="celular" class="swal2-input" placeholder="Celular" oninput="this.value = this.value.replace(/[^0-9]/g, \'\')">' +
+                `<input type="email" id="correo" class="swal2-input" value="${userEmail}" readonly>`,
+              focusConfirm: false,
+              preConfirm: () => {
+                const nombre = document.getElementById('nombreEmprendimiento').value.trim();
+                const celular = document.getElementById('celular').value.trim();
+                if (!nombre || !celular) {
+                  Swal.showValidationMessage('Por favor completa todos los campos');
+                  return false;
+                }
+                return { nombre, celular };
+              }
+            }).then(result => {
+              if (result.isConfirmed) {
+                evento.remove();
+
+                const title = `${result.value.nombre}\n${userEmail}`;
+                calendar.addEvent({
+                  title: title,
+                  start: evento.startStr,
+                  end: evento.endStr,
+                  color: '#2196F3',
+                  email: userEmail
+                });
+
+                Swal.fire('¡Cita registrada!', '', 'success');
+                // Aquí agregar lógica para guardar en backend
+              }
+            });
+
+          } else if (evento.extendedProps.email === userEmail) {
+            Swal.fire({
+              title: '¿Deseas eliminar esta cita?',
+              text: evento.title,
+              showCancelButton: true,
+              confirmButtonText: 'Eliminar',
+              cancelButtonText: 'Cancelar'
+            }).then(result => {
+              if (result.isConfirmed) {
+                evento.remove();
+
+                calendar.addEvent({
+                  title: `${evento.start.toLocaleTimeString([], {hour: '2-digit', minute: '2-digit'})}\nDisponible`,
+                  start: evento.startStr,
+                  end: evento.endStr,
+                  color: '#67bf5c'
+                });
+
+                Swal.fire('Eliminado', 'Tu cita ha sido eliminada y el espacio está disponible.', 'success');
+                // Aquí agregar lógica para eliminar del backend
+              }
+            });
+          }
+        },
+        events: eventos.map(evento => {
+          if (evento.title === 'Disponible') {
+            return {
+              ...evento,
+              title: `${new Date(evento.start).toLocaleTimeString([], {hour: '2-digit', minute: '2-digit'})}\nDisponible`,
+              color: '#67bf5c'
+            };
+          }
+          return evento;
+        })
+      });
+
+      calendar.render();
+
+      document.getElementById("logoutBtn").addEventListener("click", async () => {
+        localStorage.removeItem('tipoUsuario');
+        localStorage.removeItem('userEmail');
+        await signOut(auth);
+        window.location.href = "index.html";
+      });
+    });
+  </script>
+
+  <footer>
+    <img src="images/LOGO Uandina blanco2.png" alt="Logo UAC" class="footer-logo">
+    <div>© 2025 Universidad Andina del Cusco - Incuba Andina Lab. Todos los derechos reservados.</div>
+    <div class="social-icons">
+      <a href="https://www.facebook.com/people/Incuba-Andina-Lab/61553052163921/" target="_blank"><i class="fab fa-facebook"></i></a>
+      <a href="https://www.instagram.com/incuba_andina_lab/" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.youtube.com/@IncubaAndinaLab" target="_blank"><i class="fab fa-youtube"></i></a>
+    </div>
+  </footer>
+</body>
+</html>
